# h1_mujoco

./: CMakeLists.txt  README.md  main.cpp
controllers/: mpc_config.yaml  wbc_config.yaml
controllers/iLQR/: dynamics.cpp  dynamics.h  iLQR.cpp  iLQR.h  param.yaml  pd_controller.h
controllers/mpc/: Gait.cpp  Gait.h  foot_swing_traj.h  mpc_caller.cpp  mpc_caller.h
controllers/wbc/: DynWbc.cpp  DynWbc.hpp  KinWbc.cpp  KinWbc.hpp  WbcCtrl.cpp  WbcCtrl.hpp
controllers/wbc/TaskContact/: ArmPosTask.cpp  ArmPosTask.hpp  BodyOriTask.cpp  BodyOriTask.hpp  BodyPosTask.cpp  BodyPosTask.hpp  ContactSpec.hpp  LegPosTask.cpp  LegPosTask.hpp  LinkPosTask.cpp  LinkPosTask.hpp  SingleContact.cpp  SingleContact.hpp  Task.hpp
estimate/: esti_config.yaml  estimate.cpp  estimate.h  state.h
h1_description/mjcf/: h1.xml  h1_arm_fixed.xml  h1_fixed.xml  h1_leg_fixed.xml  h1_torso_fixed.xml  scene.xml
h1_description/urdf/: h1.urdf  h1_left_arm.urdf  h1_left_leg.urdf  h1_right_arm.urdf  h1_right_leg.urdf
simulate/: simulate.cc
test/: FSM.cpp  FSM.h
test/demo/: demo_container.cpp  demo_container.h
test/motion_planning/: motion_planning.cpp  motion_planning.h
urdf/urdf/: cassie.urdf  cassie_collide.urdf
utils/: butterworth_filter.cpp  butterworth_filter.h  cppTypes.h  dynamics.cpp  dynamics.hpp  fir_filter.cpp  fir_filter.h  kinematics.cpp  kinematics.h
